<resources>
    <string name="app_name">Gestión Almacén</string>


    <!-- Ventana de acceso  -->
    <string name="acceso_layout">Acceso</string>
    <string name="userEmail">correo electrónico</string>
    <string name="userPassword">contraseña</string>
    <string name="recordarPassword">He olvidado mi contraseña</string>
    <string name="crearCuenta">Crear usuario</string>
    <string name="iniciarSesion">Iniciar sesión</string>
    <string name="iniciarSesionCon">Iniciar sesión con</string>

    <!-- Ventana de Crear cuenta  -->
    <string name="crearCuenta_layout">Crear usuario</string>
    <string name="userPasswordRepetir">repetir contraseña</string>
    <string name="userDatosPersonales">Datos personales</string>
    <string name="userNombre">nombre</string>
    <string name="userApellidos">apellidos</string>
    <string name="userTelefono">teléfono</string>
    <string name="userImagen">Imagen de perfil</string>
    <string name="userHombre">Hombre</string>
    <string name="userMujer">Mujer</string>
    <string name="userNoProcede">No procede</string>


    <!-- Ventana de Verificar cuenta  -->
    <string name="verificarCuenta_layout">Verificación de cuenta</string>


    <!-- Ventana de Categorías  -->
    <string name="categorias_layout">Categorías</string>


    <!-- Ventana de Productos  -->
    <string name="productos_layout">Productos</string>


    <!-- Ventana de Articulo  -->
    <string name="articulo_layout">Artículo</string>


</resources>