<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="14dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@color/black"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="@string/acceso_layout"
            android:textSize="14dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="86dp" />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="20dp"
        android:gravity="center"
        android:hint="@string/userEmail"
        app:boxBackgroundColor="@color/amarilloFlojo"
        app:startIconDrawable="@drawable/icono_email"
        app:startIconTint="@null"
        tools:layout_editor_absoluteX="-49dp"
        tools:layout_editor_absoluteY="72dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/userPassword"
        app:boxBackgroundColor="@color/amarilloFlojo"
        app:counterEnabled="true"
        app:counterMaxLength="16"
        app:endIconMode="password_toggle"
        app:startIconDrawable="@drawable/icono_password"
        app:startIconTint="@null">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLength="16"
            app:boxBackgroundColor="@color/amarilloFlojo" />
    </com.google.android.material.textfield.TextInputLayout>





</LinearLayout>



