<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/UserCreate"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.UserLoginActivity"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:paddingTop="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@color/indigo"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="@string/crearCuenta"
            android:textSize="14sp"/>
    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

<!-- Correo electronico -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:id="@+id/userEmailCreate"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/userEmail"
            app:startIconDrawable="@drawable/icono_email">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

<!-- Contraseña -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:id="@+id/userPasswordCreate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="0dp"
                android:layout_marginTop="0dp"
                android:hint="@string/userPassword"
                app:counterEnabled="true"
                app:endIconMode="password_toggle"
                app:startIconDrawable="@drawable/icono_password">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

<!-- Botón información de contraseña -->
            <Button
                style="?attr/materialIconButtonStyle"
                android:id="@+id/InfPassword1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:icon="@drawable/icono_question"
                app:iconSize="30dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

<!-- Repetir contraseña -->

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:id="@+id/userPasswordRepeat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="0dp"
            android:layout_marginTop="0dp"
            android:hint="@string/userPasswordRepetir"
            app:counterEnabled="true"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/icono_password">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

<!-- Botón información de repetir contraseña -->
        <Button
            style="?attr/materialIconButtonStyle"
            android:id="@+id/InfPassword2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/icono_question"
            app:iconSize="30dp"/>
    </LinearLayout>

<!--  DATOS PERSONALES -->

    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="30dp"
        android:background="@color/verdeOscuro"
        android:textColor="@color/white"
        android:gravity="center"
        android:text="@string/userDatosPersonales"
        android:textSize="14sp"/>

 <!-- Nombre de usuario -->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayout"
        android:id="@+id/userNombre"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/userNombre">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>

<!-- Apellidos -->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayout"
        android:id="@+id/userApellidos"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:hint="@string/userApellidos">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

<!-- User Género -->
        <RadioGroup
            android:checkedButton="@+id/userGenero"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp">

            <RadioButton
                android:id="@+id/userHombre"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:enabled="true"
                android:checked="true"
                android:paddingStart="10dp"
                android:text="@string/userNombre"/>
            <RadioButton
                android:id="@+id/userMujer"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:checked="false"
                android:enabled="true"
                android:paddingStart="10dp"
                android:text="@string/userMujer"/>
            <RadioButton
                android:id="@+id/userNoProcede"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:checked="false"
                android:enabled="true"
                android:paddingStart="10dp"
                android:text="@string/userNoProcede"/>
        </RadioGroup>

<!-- Fecha de nacimiento -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:id="@+id/userNacimiento"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:layout_weight="3"
            android:layout_marginHorizontal="0dp"
            android:hint="Fecha nacimiento"
            android:clickable="false"
            android:focusable="false"
            android:enabled="false">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

<!-- Botón DatePicker -->
        <Button
            style="?attr/materialIconButtonStyle"
            android:id="@+id/datePicker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="0dp"
            app:icon="@drawable/icono_calendario"
            app:iconSize="50dp"
            app:iconTint="@null"/>
    </LinearLayout>

<!-- imagen de perfil -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp"
            android:text="@string/userImagen"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

<!-- CardView foto imagen perfil -->
                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="20dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="4dp"
                    app:cardBackgroundColor="@color/amarilloFlojo">

                    <ImageView
                        android:id="@+id/userImagen"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"/>

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1">

<!-- Botón buscar imagen perfil -->
                <Button
                    style="?attr/materialIconButtonStyle"
                    android:id="@+id/openExplorer"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginTop="0dp"
                    app:icon="@drawable/icono_folder"
                    app:iconTint="@null"
                    app:iconSize="40dp"/>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"/>

<!-- Botón de crear cuenta de usuario -->
                <Button
                    android:id="@+id/CrearCuenta"
                    style="@style/Widget.Material3.Button.ElevatedButton"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/button_background"
                    android:text="@string/crearCuenta"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    app:icon="@drawable/icono_crearcuenta"
                    app:iconGravity="start"
                    app:iconSize="30dp"
                    app:iconTint="@null" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>