<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.UserLoginActivity"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:paddingTop="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@color/black"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="@string/acceso_layout"
            android:textSize="14sp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="86dp" />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayout"
        android:id="@+id/userEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/userEmail"
        app:startIconDrawable="@drawable/icono_email">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:id="@+id/userPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="20dp"
            android:hint="@string/userPassword"
            app:counterEnabled="true"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/icono_password">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            style="?attr/materialIconButtonStyle"
            android:id="@+id/InfPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/icono_question"
            app:iconSize="30dp"/>
    </LinearLayout>

    <Button
        style="?attr/materialIconButtonStyle"
        android:id="@+id/RecordarPassword"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="190dp"
        android:textColor="@color/azul"
        android:textAlignment="textStart"
        android:text="@string/recordarPassword"
        android:textSize="12sp"
        app:icon="@drawable/icono_recordarpassword"
        app:iconTint="@color/azul"
        app:iconGravity="start"
        app:iconSize="30dp"
        android:background="@drawable/button_background"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/CrearCuenta"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/crearCuenta"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:icon="@drawable/icono_crearcuenta"
            app:iconGravity="start"
            app:iconSize="30dp"
            app:iconTint="@null" />

        <Button
            android:id="@+id/IniciarSesion"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/iniciarSesion"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:icon="@drawable/icono_login"
            app:iconGravity="start"
            app:iconSize="30dp"
            app:iconTint="@null" />
    </LinearLayout>

<!-- CARD VIEW -->

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="15dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp"
        app:cardBackgroundColor="@color/amarilloFlojo">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@color/azul"
            android:gravity="center"
            android:text="@string/iniciarSesionCon"
            android:textColor="@color/white"
            android:textSize="14sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">

            <Button
                style="?attr/materialIconButtonStyle"
                android:id="@+id/LoginGoogle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/black"
                android:textAlignment="textStart"
                app:icon="@drawable/icono_google"
                app:iconTint="@null"
                app:iconGravity="start"
                app:iconSize="40dp"
                android:background="@drawable/button_background"/>

            <Button
                style="?attr/materialIconButtonStyle"
                android:id="@+id/LoginOutlook"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/black"
                android:textAlignment="textStart"
                app:icon="@drawable/icono_outlook"
                app:iconTint="@null"
                app:iconGravity="start"
                app:iconSize="40dp"
                android:background="@drawable/button_background"/>

            <Button
                style="?attr/materialIconButtonStyle"
                android:id="@+id/LoginApple"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/black"
                android:textAlignment="textStart"
                app:icon="@drawable/icono_apple"
                app:iconTint="@null"
                app:iconGravity="start"
                app:iconSize="56dp"
                android:background="@drawable/button_background"/>

            <Button
                style="?attr/materialIconButtonStyle"
                android:id="@+id/LoginFacebook"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/black"
                android:textAlignment="textStart"
                app:icon="@drawable/icono_facebook"
                app:iconTint="@null"
                app:iconGravity="start"
                app:iconSize="40dp"
                android:background="@drawable/button_background"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>



